# CNN

./: .gitignore  CMakeLists.txt  README.md
include/: hyperparameters.hpp  network.hpp  optimisers.hpp  utils.hpp
include/layers/: adamLayer.hpp  convLayer.hpp  denseLayer.hpp  layer.hpp  poolingLayer.hpp  reLULayer.hpp  softmaxLayer.hpp
include/optimisers/: adam.hpp  optimiser.hpp  sgd.hpp
src/: cnn.cpp  network.cpp
src/layers/: adamLayer.cpp  convLayer.cpp  denseLayer.cpp  poolingLayer.cpp  reluLayer.cpp  softmaxLayer.cpp
src/optimisers/: adam.cpp  sgd.cpp
test/: CMakeLists.txt  optimise_test.cpp  pooling_test.cpp  reLU_test.cpp
